<resources>
    <string name="app_name">companyms app</string>
    <string name="companyms">CompanyMSApp</string>
    <string name="offices">Offices</string>
    <string name="employees">Employees</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="orders">Orders</string>
    <string name="payments">Payments</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_lines">Product Lines</string>
    <string name="order_details">Order Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="office_code">Office Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="phone">Phone</string>
    <string name="postal_code">Postal Code</string>
    <string name="territory">Territory</string>
    <string name="save">Save</string>
    <string name="create_office">Create Office</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="office_details">Office Details</string>
    <string name="create_product">Create Product</string>
    <string name="product_code">Product Code</string>
    <string name="product_name">Product Name</string>
    <string name="product_line">Product Line</string>
    <string name="product_scale">Product Scale</string>
    <string name="product_vendor">Product Vendor</string>
    <string name="product_description">Product Description</string>
    <string name="quantity_in_stock">Quantity In Stock</string>
    <string name="buy_price">Buy Price</string>
    <string name="msrp">msrp</string>
    <string name="image">Image</string>
    <string name="html_description">Html Description</string>
    <string name="text_description">Text Description</string>
</resources>